# vision_odometry_pipeline

./: .gitattributes  .gitignore  README.md  performance_01.csv  performance_start.csv  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  system-requirements.txt
src/datasets/kitti05_0/: K.txt
src/ml_sandbox/: main.ipynb
src/testbench/: estimation_testbench.py  replenishment_testbench.py  tracking_testbench.py  triangulation_testbench.py
src/vision_odometry_pipeline/: compare_pickle_step.py  gemini_pipeline.py  image_sequence.py  main.ipynb  main.py  main_modified_for_preproc.py  vo_configs.py  vo_gemini.py  vo_recorder.py  vo_runner.py  vo_runner_ modified_for_preproc.py  vo_runner_process.py  vo_state.py  vo_state_modified_for_preproc.py  vo_step.py
src/vision_odometry_pipeline/configs/antonios_phone/: D.txt  K.txt  antonios_phone.json
src/vision_odometry_pipeline/configs/kitti/: K.txt  kitti.json
src/vision_odometry_pipeline/configs/malaga/: K.txt  malaga.json
src/vision_odometry_pipeline/configs/parking/: parking.json
src/vision_odometry_pipeline/steps/: create_undistorted_maps.py  gemini_initialization.py  initialization.py  intial_pose_finding.py  key_point_tracker.py  local_bundle_adjustment.py  pipeline_initialization.py  pose_estimation.py  preprocessing.py  replenishment_step.py  triangulation.py
